feat: config webpack and serverless service

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy",
+    "dev": "serverless offline start",
+    "start": "npm run dev"
   },
   "author": "",
   "license": "ISC",
