--- a/serverless.yml
+++ b/serverless.yml
@@ -24,14 +24,6 @@ resources:
         AttributeDefinitions:
           - AttributeName: id
             AttributeType: S
-          - AttributeName: quantity
-            AttributeType: S
-          - AttributeName: vendor
-            AttributeType: S
-          - AttributeName: vendor_email
-            AttributeType: S
-          - AttributeName: name
-            AttributeType: S
         KeySchema:
           - AttributeName: id
             KeyType: HASH
@@ -39,6 +31,15 @@ resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         TableName: ProductInfo
+
+package:
+  exclude:
+    - .vscode/**
+    - package.json
+    - package-lock.json
+    - README.md
+    - prettier.config.js
+    - product.example.json
 
 plugins:
   - serverless-dotenv-plugin
